<resources>
    <string name="app_name">KTX-UTE</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_c_mu_n_th_m_v">Có muốn thêm vào phòng 101 không?</string>
    <string name="lbl_ng">ĐỒNG Ý</string>
    <string name="lbl_ph_ng_101">Phòng: 101</string>
    <string name="lbl_xo">XOÁ</string>
    <string name="msg_khoa_c_ng_ngh">Khoa: Công nghệ số</string>
    <string name="lbl_th_m_v_o_ph_ng">THÊM VÀO PHÒNG</string>
    <string name="msg_qu_n_l_sinh_vi">QUẢN LÍ SINH VIÊN</string>
    <string name="lbl_h_s">HỒ SƠ</string>
    <string name="msg_h_v_t_n_l_v">Họ và tên: Lê Văn A</string>
    <string name="lbl_i_ph_ng">ĐỔI PHÒNG</string>
    <string name="lbl_th_ng_tin_ph_ng">THÔNG TIN PHÒNG</string>
    <string name="lbl_nh_p_s_ph_ng">Nhập số phòng</string>
    <string name="msg_mssv_211150531">MSSV: 21115053120xxx</string>
    <string name="lbl_qu_n_l_ph_ng">QUẢN LÍ PHÒNG Ở</string>
    <string name="lbl_hu">HUỶ</string>
    <string name="lbl_nh_p_mssv">Nhập MSSV</string>
    <string name="msg_l_p_sinh_ho_t">Lớp sinh hoạt: 21T4</string>
    <string name="lbl_s_l_ng_7_8">Số lượng: 7/8</string>
    <string name="lbl_th_m_v_o_ktx">THÊM VÀO KTX</string>
    <string name="msg_c_mu_n_xo_kh">Có muốn xoá khỏi kí túc xá không?</string>
    <string name="lbl_lo_i_ph_ng_nam">Loại phòng: Nam</string>
    <string name="quan_ly_phong_o">QUẢN LÝ PHÒNG Ở</string>
    <string name="nhap_so_phong">Nhâp số phòng</string>
    <string name="ho_so">HỒ SƠ</string>
    <string name="ho_va_ten">Họ và tên: Lê Văn A</string>
    <string name="mssv">MSSV: 21115053120xxx</string>
    <string name="khoa_cong_nghe_so">Khoa: Công Nghệ Số</string>
    <string name="lop_sinh_hoat">Lớp sinh hoạt: 21T2</string>
    <string name="doi_phong">ĐỔI PHÒNG</string>
    <string name="xoa">XÓA</string>
    <string name="huy">HỦY</string>
    <string name="DONG_Y">ĐỒNG Ý</string>
    <string name="loai_phong">Loại phòng: Nam</string>
    <string name="phong">Phòng: 101</string>
    <string name="so_luong">Số lượng hiện tại: 7/8</string>
    <string name="co_muon_them">Có muốn thêm vào phòng này không?</string>
    <string name="them">THÊM VÀO PHÒNG</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="QUAN_LY_SINH_VIEN">QUẢN LÝ SINH VIÊN</string>
    <string name="them_vao_ktx">THÊM VÀO KTX</string>
    <string name="co_muon_xoa">Có muốn xoá khỏi kí túc xá không?</string>
    <string name="dong_y">ĐỒNG Ý</string>
    <string name="nhap_mssv">Nhập MSSV</string>
</resources>
