<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/groupStylegray_51"
    tools:context=".activity.XoaSinhVienActivity">

    <ScrollView
        android:clipToPadding="false"
        android:fillViewport="true"
        android:gravity="start"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/buttonBack"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_back1"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/txtInterbold20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_weight="0.9"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/QUAN_LY_SINH_VIEN"
                    tools:ignore="TextSizeCheck" />

            </LinearLayout>

            <TextView
                style="@style/txtInterbold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/ho_so"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/txt_hvt"
                style="@style/txtInterregular20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/ho_va_ten"
                android:textAlignment="center"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/txt_mssv"

                style="@style/txtInterregular20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/mssv"
                android:textAlignment="center"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/txt_khoa"
                style="@style/txtInterregular20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/khoa_cong_nghe_so"
                android:textAlignment="center"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/txt_lop_sinh_hoat"
                style="@style/txtInterregular20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lop_sinh_hoat"
                android:textAlignment="center"
                tools:ignore="TextSizeCheck" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ProgressBar>

            <LinearLayout
                android:id="@+id/linearSelect"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_doi_phong"
                    style="@style/txtSolidRounded"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingStart="@dimen/_7pxh"
                    android:paddingTop="@dimen/_2pxv"
                    android:paddingEnd="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@string/doi_phong"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/btn_xoa"
                    style="@style/txtSolidRounded"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_108pxh"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_2pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@string/xoa"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frame_xac_nhan"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                style="@style/groupStyleblue_100cornerRadius">

                <TextView
                    style="@style/txtInterregular16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/co_muon_xoa"
                    tools:ignore="TextSizeCheck" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginEnd="@dimen/_34pxh"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_button_dong_y"
                        style="@style/txtSolidRounded"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingTop="@dimen/_2pxv"
                        android:paddingBottom="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@string/dong_y"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/txt_button_huy"
                        style="@style/txtSolidRounded"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_108pxh"
                        android:layout_weight="0.5"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingTop="@dimen/_2pxv"
                        android:paddingBottom="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@string/huy"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>




