<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/groupStylegray_51"
    tools:context=".activity.BqlSinhVienShowActivity">

    <ScrollView
        android:clipToPadding="false"
        android:fillViewport="true"
        android:gravity="start"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/buttonBack"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_back1"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/txtInterbold20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_weight="0.9"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/QUAN_LY_SINH_VIEN" />

            </LinearLayout>

            <LinearLayout
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:ellipsize="end"
                    android:hint="Nhập MSSV"
                    android:id="@+id/etInputText"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_weight="0.86"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:singleLine="true"
                    android:textColorHint="@color/black_900_7f"
                    style="@style/etInterregular14"
                    />

                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_weight="0.14"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    style="@style/groupStylebluegray_800cornerRadius">

                    <ImageButton
                        android:background="@drawable/rectangle_bg_bluegray_800_radius_7_35"
                        android:id="@+id/btnSearch"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_26pxh"
                        android:layout_marginHorizontal="@dimen/_9pxh"
                        android:layout_marginVertical="@dimen/_9pxv"
                        android:layout_width="@dimen/_26pxh"
                        android:paddingHorizontal="@dimen/_3pxh"
                        android:paddingVertical="@dimen/_3pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_search"
                        tools:ignore="ContentDescription"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:ellipsize="end"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/ho_so"
                style="@style/txtInterbold20" />

            <View android:background="@color/bluegray_100"
                android:id="@+id/viewRectangleFour"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_124pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_95pxh"/>

            <TextView
                android:id="@+id/txt_hvt"
                android:ellipsize="end"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_45pxh"
                android:layout_marginStart="@dimen/_45pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/ho_va_ten"
                style="@style/txtInterregular20" />

            <TextView
                android:ellipsize="end"
                android:gravity="start"
                android:id="@+id/txt_mssv"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_45pxh"
                android:layout_marginStart="@dimen/_45pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/mssv"
                style="@style/txtInterregular20" />

            <TextView
                android:ellipsize="end"
                android:gravity="start"
                android:id="@+id/txt_khoa"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_45pxh"
                android:layout_marginStart="@dimen/_45pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/khoa_cong_nghe_so"
                style="@style/txtInterregular20" />

            <TextView
                android:ellipsize="end"
                android:gravity="start"
                android:id="@+id/txt_lop_sinh_hoat"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_45pxh"
                android:layout_marginStart="@dimen/_45pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lop_sinh_hoat"
                style="@style/txtInterregular20"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn_them_ktx"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_36pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="@dimen/_147pxh"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_23pxh"
                android:paddingStart="@dimen/_23pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/them_vao_ktx"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>


