<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/groupStylegray_51"
    tools:context=".activity.BqlPhongShowActivity">

    <ScrollView
        android:clipToPadding="false"
        android:fillViewport="true"
        android:gravity="start"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/buttonBack"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_back1"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txt_qlp_bql"
                    style="@style/txtInterbold20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_weight="0.9"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/quan_ly_phong_o" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSearch"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    style="@style/groupStylebluegray_800cornerRadius">

                    <ImageButton
                        android:background="@drawable/rectangle_bg_bluegray_800_radius_7_35"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="40dp"
                        android:layout_width="@dimen/_30pxh"
                        android:paddingHorizontal="@dimen/_3pxh"
                        android:paddingVertical="@dimen/_3pxv"
                        android:scaleType="centerCrop"
                        android:src="@drawable/outline_home_24"
                        tools:ignore="ContentDescription"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_26pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="THÔNG TIN PHÒNG"
                style="@style/txtInterbold20" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/txt_loai_phong"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/loai_phong"
                style="@style/txtInterregular20" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/txt_phong"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/phong"
                style="@style/txtInterregular20" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/txt_so_luong"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/so_luong"
                style="@style/txtInterregular20" />

            <TextView
                android:ellipsize="end"
                android:id="@+id/txt_so_luong_toi_da"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_50pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/so_luong"
                style="@style/txtInterregular20" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_xac_nhan"
                style="@style/btnSolidRounded"
                android:layout_width="191dp"
                android:layout_height="@dimen/_36pxv"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_50pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_13pxh"
                android:paddingTop="@dimen/_10pxv"
                android:paddingEnd="@dimen/_13pxh"
                android:paddingBottom="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/QUAN_LY_SINH_VIEN" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>

